--- a/packageRun/package.json
+++ b/packageRun/package.json
@@ -2,20 +2,27 @@
   "name": "packagerun",
   "displayName": "packagerun",
   "description": "vscode扩展，读取package.json并在左侧目录的package.json右键里面生成scripts的配置内容，快速运行npm run",
-  "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.79.0"
+  "version": "0.0.2",
+  "author": {
+    "name": "inksnow",
+    "email": "inksnowhailong@gmail.com"
   },
+  "engines": {
+    "vscode": "^1.70.0"
+  },
+  "publisher": "inksnow",
+  "icon":"./logo.jpg",
   "categories": [
     "Other"
   ],
+  "pricing": "Free",
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
         "command": "packagerun.commands",
-        "title": "packagerun:右键package.json"
+        "title": "packagerun:快捷键shift+r"
       },
       {
         "command": "packagerun.key",
@@ -38,8 +45,18 @@
         "mac": "shift+r",
         "when": "activeEditor != undefined"
       }
-    ]
-  },
+    ],
+    "configuration": {
+      "title": "packageRun自定义预定命令",
+      "properties": {
+        "packagerun.commandOptions": {
+          "type": "array",
+          "default": [],
+          "description": "以Array<{label:string;scirpt:string;path?:string}>类型,预定义一些要执行的命令"
+        }
+      }
+  }
+},
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
@@ -52,7 +69,7 @@
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.3.3",
-    "@types/vscode": "^1.79.0",
+    "@types/vscode": "^1.70.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vscode/test-electron": "^2.3.2",
@@ -62,6 +79,5 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "pkg-dir": "^7.0.0"
   }
 }
