--- a/packageRun/package.json
+++ b/packageRun/package.json
@@ -2,7 +2,7 @@
   "name": "packagerun",
   "displayName": "packagerun",
   "description": "vscode扩展，读取package.json并在左侧目录的package.json右键里面生成scripts的配置内容，快速运行npm run",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "author": {
     "name": "inksnow",
     "email": "inksnowhailong@gmail.com"
@@ -15,6 +15,10 @@
   "categories": [
     "Other"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/inksnowhailong/vscode-plugin"
+  },
   "pricing": "Free",
   "activationEvents": [],
   "main": "./out/extension.js",
