--- a/packageRun/package.json
+++ b/packageRun/package.json
@@ -2,7 +2,7 @@
   "name": "packagerun",
   "displayName": "packagerun",
   "description": "vscode扩展，读取package.json并在左侧目录的package.json右键里面生成scripts的配置内容，快速运行npm run",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "author": {
     "name": "inksnow",
     "email": "inksnowhailong@gmail.com"
@@ -26,11 +26,11 @@
     "commands": [
       {
         "command": "packagerun.commands",
-        "title": "packagerun:快捷键shift+r"
+        "title": "packagerun"
       },
       {
         "command": "packagerun.key",
-        "title": "packagerun:快捷键shift+r"
+        "title": "packagerun"
       }
     ],
     "menus": {
@@ -45,8 +45,8 @@
     "keybindings": [
       {
         "command": "packagerun.key",
-        "key": "shift+r",
-        "mac": "shift+r",
+        "key": "ctrl+alt+x",
+        "mac": "ctrl+cmd+x",
         "when": "activeEditor != undefined"
       }
     ],
