--- a/wingmate/tsconfig.json
+++ b/wingmate/tsconfig.json
@@ -6,12 +6,15 @@
 		"lib": [
 			"ES2020"
 		],
+		"noEmitOnError": false,
 		"sourceMap": true,
 		"rootDir": "src",
+		"skipLibCheck": true,
+		"types": [],
 		"strict": true   /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+	},
 }
