--- a/wingmate/package.json
+++ b/wingmate/package.json
@@ -2,7 +2,7 @@
   "name": "wingmate",
   "displayName": "wingmate",
   "description": "僚机",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": {
     "name": "inksnow",
     "email": "inksnowhailong@gmail.com"
@@ -11,6 +11,7 @@
   "engines": {
     "vscode": "^1.70.0"
   },
+  "icon":"./logo.png",
   "categories": [
     "Other"
   ],
