--- a/wingmate/tsconfig.json
+++ b/wingmate/tsconfig.json
@@ -4,17 +4,19 @@
 		"target": "ES2020",
 		"outDir": "out",
 		"lib": [
-			"ES2020"
+			"ES2020",
+			"DOM"
 		],
 		"noEmitOnError": false,
 		"sourceMap": true,
 		"rootDir": "src",
 		"skipLibCheck": true,
 		"types": [],
-		"strict": true   /* enable all strict type-checking options */
+		"strict": true,   /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
+	"include":["./**/*.ts","./**/*.d.ts"]
 }
