--- a/apidoc2ts/package.json
+++ b/apidoc2ts/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "vscode": "^1.70.0"
   },
-  "icon": "./logo.png",
+  "icon": "logo.png",
   "categories": [
     "Other"
   ],
@@ -56,7 +56,7 @@
     "type": "git",
     "url": "https://github.com/inksnowhailong/vscode-plugin"
   },
-  "files":[
+  "files": [
     "**/*.png",
     "**/*.jpg",
     "**/*.gif",
@@ -91,7 +91,7 @@
     "dedent": "^1.5.1",
     "esbuild": "^0.19.4",
     "fuse.js": "^6.6.2",
-    "puppeteer-core": "^21.3.6",
+    "puppeteer-core": "^21.10.0",
     "tabletojson": "^3.0.0",
     "yallist": "^4.0.0"
   }
