--- a/packageRun/package.json
+++ b/packageRun/package.json
@@ -2,7 +2,7 @@
   "name": "packagerun",
   "displayName": "packagerun",
   "description": "vscode扩展，读取package.json并在左侧目录的package.json右键里面生成scripts的配置内容，快速运行npm run",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "author": {
     "name": "inksnow",
     "email": "inksnowhailong@gmail.com"
@@ -20,7 +20,9 @@
     "url": "https://github.com/inksnowhailong/vscode-plugin"
   },
   "pricing": "Free",
-  "activationEvents": [],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -59,8 +61,8 @@
           "description": "以Array<{label:string;scirpt:string;path?:string}>类型,预定义一些要执行的命令"
         }
       }
-  }
-},
+    }
+  },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
@@ -70,7 +72,6 @@
     "test": "node ./out/test/runTest.js",
     "publish": "vsce publish"
   },
-
   "devDependencies": {
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
