--- a/packageRun/package.json
+++ b/packageRun/package.json
@@ -1,8 +1,8 @@
 {
   "name": "packagerun",
   "displayName": "packagerun",
-  "description": "vscode扩展，读取package.json并在左侧目录的package.json右键里面生成scripts的配置内容，快速运行npm run",
-  "version": "0.0.10",
+  "description": "vscode扩展，读取package.json并可以快速执行里面的命令，或者执行自定义的命令",
+  "version": "0.0.11",
   "author": {
     "name": "inksnow",
     "email": "inksnowhailong@gmail.com"
